--- a/templates/payment.html
+++ b/templates/payment.html
@@ -39,6 +39,6 @@
   			</div>
   		</div>
   	</div>
-  	<img src="img/orderImg.jpg" alt="orderImg" class="order__img">
+  	<img src="{% static 'img/orderImg.jpg' %}" alt="orderImg" class="order__img">
   </section>
 {% endblock %}
