--- a/templates/index.html
+++ b/templates/index.html
@@ -22,24 +22,14 @@
         <div class="recommended p100">
             <div class="title">Рекомендуем</div>
             <div class="recommended__elems ficb">
-                <div class="recommended__block recommended__block_first">
+            {% for bouquet in bouquets_recommended %}
+                <div class="recommended__block" style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>
                     <div class="recommended__block_elems ficb">
-                        <span class="recommended__block_intro">Летнее утро</span>
-                        <span class="recommended__block_price">3 600 руб</span>
+                        <span class="recommended__block_intro">{{ bouquet.title }}</span>
+                        <span class="recommended__block_price">{{ bouquet.price }} руб</span>
                     </div>
                 </div>
-                <div class="recommended__block recommended__block_sec">
-                    <div class="recommended__block_elems ficb">
-                        <span class="recommended__block_intro">Зимняя сказка</span>
-                        <span class="recommended__block_price">4 100 руб</span>
-                    </div>
-                </div>
-                <div class="recommended__block recommended__block_thr">
-                    <div class="recommended__block_elems ficb">
-                        <span class="recommended__block_intro">Нежный</span>
-                        <span class="recommended__block_price">2 800 руб</span>
-                    </div>
-                </div>
+            {% endfor %}
             </div>
         </div>
     </div>
