--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -9,49 +9,18 @@
   		<div class="catalog">
   			<div class="title">Все букеты</div>
   			<div class="catalog__block">
-  				<div class="recommended__elems ficb recommended__elems_first">
-  					<div class="recommended__block recommended__block_first">
+				{% for bouquets_row in bouquets_rows %}
+  				<div class="recommended__elems ficb">
+					{% for bouquet in bouquets_row.bouquets_row %}
+  					<div class="recommended__block recommended__block_first"  style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>
   						<div class="recommended__block_elems ficb">
-  							<span class="recommended__block_intro">Летнее утро</span>
-  							<span class="recommended__block_price">3 600 руб</span>
+  							<span class="recommended__block_intro">{{ bouquet.title }}</span>
+  							<span class="recommended__block_price">{{ bouquet.price }} руб</span>
   						</div>
   					</div>
-  					<div class="recommended__block recommended__block_sec">
-  						<div class="recommended__block_elems ficb">
-  							<span class="recommended__block_intro">Пламенный закат</span>
-  							<span class="recommended__block_price">3 600 руб</span>
-  						</div>
-  					</div>
-  					<div class="recommended__block recommended__block_thr">
-  						<div class="recommended__block_elems ficb">
-  							<span class="recommended__block_intro">Осенний</span>
-  							<span class="recommended__block_price">3 600 руб</span>
-  						</div>
-  					</div>
-  					  
+					{% endfor %}
   				</div>
-  				<div class="recommended__elems ficb recommended__elems_sec">
-  					<div class="recommended__block recommended__block_first">
-  						<div class="recommended__block_elems ficb">
-  							<span class="recommended__block_intro">Полевой</span>
-  							<span class="recommended__block_price">1 600 руб</span>
-  						</div>
-  					</div>
-  					<div class="recommended__block recommended__block_sec">
-  						<div class="recommended__block_elems ficb">
-  							<span class="recommended__block_intro">Весенний</span>
-  							<span class="recommended__block_price">3 200 руб</span>
-  						</div>
-  					</div>
-  					<div class="recommended__block recommended__block_thr">
-  						<div class="recommended__block_elems ficb">
-  							<span class="recommended__block_intro">Нежный</span>
-  							<span class="recommended__block_price">2 900 руб</span>
-  						</div>
-  					</div>
-  					
-  					
-  				</div>
+				{% endfor %}
   				<button class="btn largeBtn catalog__btn">Показать ещё</button>
   			</div>
   		</div>
