Added quiz, quiz_step, result logic

--- a/templates/card.html
+++ b/templates/card.html
@@ -16,6 +16,7 @@
   				<div class="card__elems ">
   					<span class="card__elems_intro">Состав</span>
   					<div class="card__items">
+						{% for %}
   						<span class="card_items_intro">
   							Гортензия розовая - 1 шт.
   						</span>
