--- a/templates/quiz-step.html
+++ b/templates/quiz-step.html
@@ -14,10 +14,12 @@
   			<div class="quiz__block">
   				<h1 class="quiz__title">На какой бюджет рассчитываете?</h1>
   				<div class="quiz__elems fic">
-  					<button class="quiz__elem">До 1 000 руб</button>
-  					<button class="quiz__elem">1 000 - 5 000 руб</button>
-  					<button class="quiz__elem">от 5 000 руб</button>
-  					<button class="quiz__elem">Не имеет значения</button>
+					<form method="POST" action="{% url 'result' %}">
+						{% csrf_token %}
+						{% for range in price_ranges %}
+							<button class="quiz__elem" type="submit" name="button_value" value="{{ range.id }}">{{ range.get_text }}</button>
+						{% endfor %}
+					</form>
   				</div>
   				<div class="quiz__progress">
   					<div class="quiz__progress_step">
