--- a/templates/result.html
+++ b/templates/result.html
@@ -14,10 +14,7 @@
   						<span class="card__elems_intro">Описание:</span>
   						<div class="card__items">
   							<p class="card__items_text card__items_text__first">
-  								Этот букет передает атмосферу летнего утра в деревне. Букет создан из свежих полевых цветов, собранных в самом сердце природы. В состав букета входит ромашка, пионовидная роза, альстромерия, эустома, веточка эвкалипта, декоративная зелень. Все цветы собраны вручную и аккуратно высушены. 
-  							</p>
-  							<p class="card__items_text">
-  								Букеты из полевых цветов - это не только прекрасный подарок, но и отличный способ выразить свои чувства.
+								{{ result.description }}
   							</p>
   						</div>
   					</div>
@@ -25,16 +22,16 @@
   						<span class="card__elems_intro">Состав:</span>
   						<div class="card__items">
   							<p class="card__items_text card__items_text__first">
-  								Альстромерия белая 1 шт., Эустома белая 1 шт, Ромашка 1 шт, Роза пионовидная 1 шт 
+								{{ result.composition }}
   							</p>
   							
   						</div>
   					</div>
   				</div>
-  				<img src="{% static 'img/cardImg.jpg' %}" alt="result Img" class="result__block_img">
+  				<img src="{{ result.picture.url }}" alt="result Img" class="result__block_img">
   				<div class="result__items">
-  					<div class="title result__items_title">Летнее утро</div>
-  					<div class="result__items_price">3 600 руб</div>
+  					<div class="title result__items_title">{{ result.title }}</div>
+  					<div class="result__items_price">{{ result.price }} руб</div>
   					<button class="btn result__items_btn">Заказать букет</button>
   					<hr class="result__items_line" />
   					<div class="result__items_intro">Хотите что-то более специальное?</div>
