--- a/templates/result.html
+++ b/templates/result.html
@@ -32,12 +32,12 @@
   				<div class="result__items">
   					<div class="title result__items_title">{{ result.title }}</div>
   					<div class="result__items_price">{{ result.price }} руб</div>
-  					<button class="btn result__items_btn">Заказать букет</button>
+  					<button class="btn result__items_btn" type="submit" value="{{ result.id }}" onclick="location.href='{% url 'delivery' %}'">Заказать букет</button>
   					<hr class="result__items_line" />
   					<div class="result__items_intro">Хотите что-то более специальное?</div>
   					<div class="result__items_block">
-  						<button class="btn largeBtn result__items_block__btn">Смотреть всю коллекцию</button>
-  						<button class="btn largeBtn result__items_block__btn">Заказать консультацию</button>
+  						<button class="btn largeBtn result__items_block__btn" onclick="location.href='{% url 'catalog' %}'">Смотреть всю коллекцию</button>
+  						<button class="btn largeBtn result__items_block__btn" value="{{ result.id }}" onclick="location.href='{% url 'consultation' %}'">Заказать консультацию</button>
   					</div>
   				</div>
   			</div>	
@@ -50,25 +50,19 @@
   			<div class="title">Как нас найти</div>
   			<div class="contacts__elems ficb">
   				<div class="contacts__block">
+					{% for store in stores %}
   					<div class="contacts__block_item ficc">
-  						<div class="contacts__block_intro">ул. Пушкинская, 69</div>
-  						<a href="tel:89111744460" class="contacts__block_tel">8 (911) 17 44 460</a>
+  						<div class="contacts__block_intro">{{ store.address }}</div>
+  						<a href="tel:{{ store.phone }}" class="contacts__block_tel">{{ store.phone }}</a>
   					</div>
-  					<div class="contacts__block_item ficc">
-  						<div class="contacts__block_intro">ул. Пушкинская, 69</div>
-  						<a href="tel:89111744460" class="contacts__block_tel">8 (911) 17 44 460</a>
-  					</div>
-  					<div class="contacts__block_item ficc">
-  						<div class="contacts__block_intro">ул. Пушкинская, 69</div>
-  						<a href="tel:89111744460" class="contacts__block_tel">8 (911) 17 44 460</a>
-  					</div>
+					{% endfor %}
   				</div>
   				<img src="{% static 'img/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
   				<div class="contacts__map">
   					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
   				</div>					
   			</div>
-  			<button class="btn contacts__btn">Заказать доставку</button>
+  			<button class="btn contacts__btn" type="submit" value="{{ result.id }}" onclick="location.href='{% url 'delivery' %}'">Заказать доставку</button>
   		</div>
   	</div>
   </section>
@@ -79,7 +73,7 @@
   			<form action="#" class="consultation__form">
   				<input type="text" name="fname" class="consultation__form_input" placeholder="Введите Имя" required>
   				<input type="text" name="tel" class="consultation__form_input" placeholder="+ 7 (999) 000 00 00" required>
-  				<button type="submit" class="consultation__form_btn">Отправить</button>
+  				<button type="submit" class="consultation__form_btn" value="{{ result.id }}" onclick="location.href='{% url 'consultation' %}'">Отправить</button>
   			</form>
   		</div>
   	</div>
