--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -10,25 +10,27 @@
   			<div class="order__block">
   				<div class="order_items">
   					<div class="title">Оформление доставки</div>
-  					<form action="#" class="order__form">
+  					<form action="{% url 'payment' %}" method="POST" class="order__form">
+						{% csrf_token %}
   						<div class="order__form_block ficb">
   							<input type="text" name="fname" class="order__form_input" placeholder="Введите Имя" required>
   							<input type="text" name="tel" class="order__form_input" placeholder="+ 7 (999) 000 00 00" required>
-  							<input type="text" name="adres" class="order__form_input" placeholder="Адрес доставки" required>
+  							<input type="text" name="address" class="order__form_input" placeholder="Адрес доставки" required>
   						</div>
   						<div class="order__form_btns fic">
-							{% csrf_token %}
+
 							{% for time_period in time_periods %}
-  							<div class="order__form_radioBlock ">
-  								<input type="radio" name="orderTime" id="radio{{ time_period.id }}" value="{{ time_period.text }}" class="order__form_radio" />
-  								<label for="radio{{ time_period.id }}" class="radioLable">{{ time_period.text }}</label>
-  							</div>
+								<div class="order__form_radioBlock ">
+									<input type="radio" name="orderTime" id="{{ time_period.id }}" value="{{ time_period.id }}" class="order__form_radio" />
+									<label for="{{ time_period.id }}" class="radioLable">{{ time_period.text }}</label>
+								</div>
 							{% endfor %}
+
   						</div>
   						<div class="order__form_line"></div>
   						<div class="order__form_btns ficb">
-  							<button class="btn order__form_pay">Оплатить</button>
-  							<button class="btn order__form_btn">Назад</button>
+  							<button type="submit" class="btn order__form_pay">Оплатить</button>
+  							<a href="{% url 'main' %}" class="btn order__form_btn">Назад</a>
   						</div>
   					</form>
   				</div>
