--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,13 @@
 {% block content %}
 
 <div class="mainBg">
+    {% if messages %}
+        <div id="django-messages">
+            {% for message in messages %}
+                <div class="custom-alert {{ message.tags }}">{{ message }}</div>
+            {% endfor %}
+        </div>
+    {% endif %}
     <section id="banner">
         <div class="container">
             <div class="banner">
@@ -53,5 +60,14 @@
     </div>
 </div>
 </section>
+
+<script>
+    window.onload = function() {
+        const messages = document.querySelector('#django-messages .alert');
+        if (messages) {
+            alert(messages.textContent.trim());
+        }
+    };
+</script>
 
 {% endblock %}
