--- a/templates/payment.html
+++ b/templates/payment.html
@@ -9,8 +9,22 @@
   		<div class="order orderStep">
   			<div class="order__block">
   				<div class="order_items">
+					{% if messages %}
+						<ul class="messages">
+							{% for message in messages %}
+								<li class="{{ message.tags }}">{{ message }}</li>
+							{% endfor %}
+						</ul>
+					{% endif %}
   					<div class="title">Оплата</div>
-  					<form action="#" class="order__form orderStep_form">
+  					<form action="{% url 'process_payment' %}" method="POST" class="order__form orderStep_form">
+						{% csrf_token %}
+
+					<input type="hidden" name="fname" value="{{ name }}">
+					<input type="hidden" name="tel" value="{{ phone_number }}">
+					<input type="hidden" name="address" value="{{ address }}">
+					<input type="hidden" name="orderTime" value="{{ order_time }}">
+
   						<div class="order__form_block">
   							<div class="order__form_items">
   								<div class="order__form_intro">номер карты</div>
@@ -30,7 +44,7 @@
   						</div>
   						<div class="order__form_line"></div>
   						<div class="order__form_btns ficb">
-  							<button class="btn order__form_pay">Оплатить</button>
+  							<button type="submit" class="btn order__form_pay">Оплатить</button>
   							<button class="btn order__form_btn">Назад</button>
   						</div>
   					</form>
