--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 </section>
-
+<a id="contacts"></a>
 {% include '_contacts.html' with stores=stores %}
 
 <section id="consultation">
