--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,7 +12,7 @@
       </nav>
       <hr class="line"></hr>
       <a href="#" class="footer__poli">Политика конфиденциальности</a>
-      <p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
+      <p class="footer_cop">©️{{current_year}}. FlowerShop. Все права защищены</p>
     </div>
   </div>
 </footer>
