--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -13,12 +13,17 @@
 				{% for bouquets_row in bouquets_rows %}
   				<div class="recommended__elems ficb">
 					{% for bouquet in bouquets_row.bouquets_row %}
-  					  <div class="recommended__block recommended__block_first"  style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>
-  						<div class="recommended__block_elems ficb">
-  							<span class="recommended__block_intro">{{ bouquet.title }}</span>
-  							<span class="recommended__block_price">{{ bouquet.price }} руб</span>
-  						</div>
-  					  </div>
+					<form method="POST" action="{% url 'delivery' %}">
+                        {% csrf_token %}
+						<input type="hidden" name="bouquet_id" value="{{ bouquet.id }}">
+                        <button type="submit" class="recommended__block recommended__block_first"
+                            style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>
+							<div class="recommended__block_elems ficb">
+								<span class="recommended__block_intro">{{ bouquet.title }}</span>
+								<span class="recommended__block_price">{{ bouquet.price }} руб</span>
+							</div>
+						</button>
+                    </form>
 					{% endfor %}
   				</div>
 				{% endfor %}
