--- a/templates/index.html
+++ b/templates/index.html
@@ -34,12 +34,18 @@
             <div class="recommended__elems ficb">
             {% csrf_token %}
             {% for bouquet in bouquets_recommended %}
-                <div class="recommended__block" style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>
+                <form method="POST" action="{% url 'delivery' %}">
+                    {% csrf_token %}
+    <!--                <div class="recommended__block" style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>-->
+                    <input type="hidden" name="bouquet_id" value="{{ bouquet.id }}">
+                    <button type="submit" class="recommended__block recommended__block_first"
+                        style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>
                     <div class="recommended__block_elems ficb">
                         <span class="recommended__block_intro">{{ bouquet.title }}</span>
                         <span class="recommended__block_price">{{ bouquet.price }} руб</span>
                     </div>
-                </div>
+                    </button>
+                </form>
             {% endfor %}
             </div>
         </div>
