--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     {% if messages %}
         <div id="django-messages">
             {% for message in messages %}
-                <div class="custom-alert {{ message.tags }}">{{ message }}</div>
+                <div class="custom-alert {{ message.tags }}" style="width: 50%; transform: translate(50%, 50%);">{{ message }}</div>
             {% endfor %}
         </div>
     {% endif %}
