--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -13,7 +13,7 @@
 				{% for bouquets_row in bouquets_rows %}
   				<div class="recommended__elems ficb">
 					{% for bouquet in bouquets_row.bouquets_row %}
-					<form method="POST" action="{% url 'delivery' %}">
+					<form method="POST" action="{% url 'pay-delivery' %}">
                         {% csrf_token %}
 						<input type="hidden" name="bouquet_id" value="{{ bouquet.id }}">
                         <button type="submit" class="recommended__block recommended__block_first"
