--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
             <div class="recommended__elems ficb">
             {% csrf_token %}
             {% for bouquet in bouquets_recommended %}
-                <form method="POST" action="{% url 'delivery' %}">
+                <form method="POST" action="{% url 'pay-delivery' %}">
                     {% csrf_token %}
     <!--                <div class="recommended__block" style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>-->
                     <input type="hidden" name="bouquet_id" value="{{ bouquet.id }}">
